# ai-chatot

./: .gitignore  README.md  pyproject.toml
ai_chatbot/: RagHandler.py  __init__.py  __main__.py  main.py
backend/: README.md
backend/ai_chatbot/: RagHandler.py  __init__.py  __main__.py  getPdfs.py
